--- a/client/bower.json
+++ b/client/bower.json
@@ -12,7 +12,7 @@
     "game"
   ],
   "license": "MIT",
-  "private": true,
+  "private": false,
   "ignore": [
     "**/.*",
     "node_modules",
@@ -24,6 +24,7 @@
     "jquery": "~2.1.1",
     "angular": "~1.2.16",
     "angular-route": "~1.2.16",
-    "angular-cookies": "~1.2.16"
+    "angular-cookies": "~1.2.16",
+    "bootstrap": "~3.1.1"
   }
 }
