--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,9 @@
   "homepage": "https://github.com/marcoau/avalon",
   "dependencies": {
     "express": "^4.2.0",
-    "cookie-parser": "^1.1.0"
+    "cookie-parser": "^1.1.0",
+    "socket.io": "^0.9.16",
+    "passport": "^0.2.0",
+    "jade": "^1.3.1"
   }
 }
