--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "cookie-parser": "^1.1.0",
     "socket.io": "^0.9.16",
     "passport": "^0.2.0",
-    "jade": "^1.3.1"
+    "jade": "^1.3.1",
+    "underscore": "^1.6.0"
   }
 }
